# CGDB

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Procfile  README.md  SECURITY.md  analysis.html  analysis.migrations.html  analysis.tests.html  conftest.py  genindex.html  index.html  manage.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  search.html  searchindex.js  ty.ini  vulture_whitelist.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: documentation.yml  test.yml
_modules/: index.html
_modules/analysis/: admin.html  apps.html  forms.html  models.html
_modules/analysis/migrations/: 0001_initial.html  0002_initial.html  0003_initial.html  0004_initial.html  0005_alter_genericmeasurement_options_and_more.html  0006_alter_luminescencedating_aliquot_size.html  0007_grainsize_gravel_grainsize_source_and_more.html  0008_alter_microxrfmeasurement_options_and_more.html  0009_alter_algorithm_description_alter_algorithm_link_and_more.html
_modules/analysis/tests/: test_admin.html  test_forms.html  test_grainsize.html  test_grainsize_fromfile.html  test_luminescence.html  test_models.html  test_other_models.html
_sources/: analysis.migrations.rst.txt  analysis.rst.txt  analysis.tests.rst.txt
analysis/: __init__.py  admin.py  apps.py  forms.py  models.py  resources.py
analysis/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_initial.py  0005_alter_genericmeasurement_options_and_more.py  0006_alter_luminescencedating_aliquot_size.py  0007_grainsize_gravel_grainsize_source_and_more.py  0008_alter_microxrfmeasurement_options_and_more.py  0009_alter_algorithm_description_alter_algorithm_link_and_more.py
analysis/tests/: conftest.py  test_admin.py  test_forms.py  test_grainsize.py  test_grainsize_fromfile.py  test_luminescence.py  test_models.py  test_other_models.py
bibliography/: __init__.py  admin.py  apps.py  models.py  resources.py
bibliography/migrations/: 0001_initial.py  0002_initial.py  0003_alter_author_options_alter_referencekeyword_options_and_more.py  0004_alter_reference_isbn_online_and_more.py  0005_alter_reference_doi_alter_reference_how_to_cite_and_more.py
bibliography/tests/: test_models.py
docs/source/: conf.py  index.rst
field_data/: __init__.py  admin.py  api_views.py  apps.py  filters.py  forms.py  models.py  resources.py  serializers.py  utils.py
field_data/migrations/: 0001_initial.py  0002_initial.py  0003_alter_campaign_options_alter_exposuretype_options_and_more.py  0004_alter_location_options_alter_studyarea_options_and_more.py  0005_location_gps_accuracy_positioning_method.py  0006_location_type.py  0007_alter_location_project.py  0008_tag_slug_partial_unique.py  0009_sample_identifier_unique_per_project.py  0010_add_sample_status.py  0011_campaign_label_unique_per_project.py  0012_studyarea_label_unique_per_project.py  0013_layer_identifier_unique_per_location.py  0014_fieldphoto.py
field_data/tests/: test_admin.py  test_filters.py  test_forms.py  test_models.py  test_utils.py
geodata/: __init__.py  admin.py  api_views.py  apps.py  models.py  resources.py  serializers.py
geodata/management/: __init__.py
geodata/management/commands/: __init__.py  import_landforms.py
geodata/migrations/: 0001_initial.py
laboratory/: __init__.py  admin.py  apps.py  models.py
laboratory/migrations/: 0001_initial.py  0002_initial.py  0003_alter_calibration_options_calibration_modified_at_and_more.py  0004_alter_accessory_description_and_more.py
laboratory/tests/: test_models.py
morphogrid/: admin.py  apps.py  models.py
morphogrid/migrations/: 0001_initial.py  0002_remove_gridcell_footprint.py
orchestration/: __init__.py  admin.py  apps.py  models.py  signals.py
orchestration/dagster_home/: assets.py  dagster.yaml  jobs.py  maintenance_jobs.py  repository.py
orchestration/management/: __init__.py
orchestration/management/commands/: __init__.py  run_maintenance_job.py
orchestration/migrations/: 0001_initial.py  0002_maintenancerun_dump_format.py  0003_integrityissue.py
orchestration/tests/: test_admin.py  test_jobs.py  test_management.py  test_models.py  test_signals.py
prototype/: __init__.py  admin.py  api_permissions.py  api_router.py  apps.py  asgi.py  local_settings_TEMPLATE copy.py  local_settings_TEMPLATE.py  middleware.py  mixins.py  models.py  permissions.py  settings.py  signals.py  test_settings.py  unfold_settings.py  urls.py  views.py  wsgi.py
prototype/management/: __init__.py
prototype/management/commands/: __init__.py  create_permission_groups.py
prototype/migrations/: 0001_initial.py  0002_alter_project_options_alter_researchgroup_options_and_more.py  0003_add_members_to_project.py  0004_alter_project_description_alter_project_subtitle_and_more.py  0005_add_audit_fields_to_projectuserobjectpermission.py  __init__.py
prototype/tests/: test_admin.py  test_admin_project_scoping.py  test_api_permissions.py  test_map_views.py  test_middleware.py  test_mixins.py  test_models.py  test_permission_groups.py  test_signals.py  test_views.py
raster_data/: __init__.py  admin.py  api_views.py  apps.py  models.py  serializers.py
raster_data/migrations/: 0001_initial.py  0002_simplify_to_three_models.py  0003_alter_rasterscene_spatial_bbox.py
raster_data/tests/: test_api.py  test_models.py
scripts/: run-basedpyright.cmd  run-mypy.cmd
static/css/: dj_map.css  styles.css
templates/admin/: base_site.html  change_list_results.html  index.html  map_dashboard.html
templates/admin/field_data/: bulk_tag_action.html
templates/admin/morphogrid/gridcell/: change_form.html  change_list.html
templates/unfold/helpers/: header_title.html
