[project]
name = "cgdb"
requires-python = ">=3.13"
version = "1"
dependencies = [
    "django[argon2]>=6.0.6",
    "django-unfold>=0.75.0",
    "psycopg>=3.3.2",
    "python-decouple>=3.8",
    "argon2-cffi>=25.1.0",
    "django-crispy-forms>=2.5",
    "django-filter>=25.2",
    "django-guardian>=3.2.0",
    "django-import-export>=4.3.14",
    "djangorestframework>=3.17.1",
    "djangorestframework-gis>=1.2.1",
    "drf-spectacular>=0.28.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pillow>=12.3.0",
    "dagster>=1.13.14",
    "dagster-webserver>=1.12.8",
    "dagster-postgres>=0.28.8",
    "duckdb>=1.4.3",
    "pandas>=2.0",
    "honcho>=2.0.0",
    "django-docs>=0.3.3",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]
[tool.ruff]
target-version = "py313"
line-length = 79
force-exclude = true  # honour exclude even when files are passed explicitly (e.g. pre-commit)

# Exclude-Files
exclude = [
    "**/migrations/**",
    "**/tests/**",
    "**/settings.py",
    "**/local_settings*",
    "vulture_whitelist.py",
]


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # --- Style / formatter ---
    "E501",    # Line too long (enforced by line-length above)
    "COM812",  # Trailing comma: ruff-format manages this; COM812 conflicts with the formatter
    # --- Django-specific exemptions ---
    "RUF012",  # ClassVar on mutable class attributes: no ruff auto-fix, 211 Django admin/model attrs
    "SLF001",  # Private member accessed: Model._meta is Django's documented API for model metadata
    # --- Lazy imports inside functions: Django pattern to avoid circular imports ---
    "PLC0415", # import-outside-top-level: e.g. apps.get_model(), signals, admin inside ready()
    # --- Boolean arguments: Django save_model(change) and signals(created) require positional bool ---
    "FBT001",  # boolean-type-hint-positional-argument: Django/signal convention
    # --- Unicode in scientific notation and technical documentation ---
    "RUF001",  # Ambiguous Unicode in strings (σ, α, γ, isotope symbols)
    "RUF003",  # Ambiguous Unicode in comments (EN dash in ranges)
]

[tool.ruff.lint.per-file-ignores]
# Test settings use a deliberate placeholder secret key; E402 because Django setup precedes imports
"prototype/test_settings.py" = ["S105", "E402"]
# pytest fixture signatures (config, session, exitstatus) require specific names and may go unused
# PLW0603: global _TEST_MEDIA_ROOT shared across fixture setup/teardown (standard pytest pattern)
"conftest.py" = ["ANN001", "ARG001", "PLW0603"]
# manage.py is Django-generated and must not be modified
"manage.py" = ["TRY003", "EM101"]
# GrainSizeImportForm.clean_file: broad catch converts any read error to ValidationError (Django form pattern)
# MicroXRFAdmin.preview: broad catch returns a safe error string in a display-only method
# TRY301: raise inside try is the Django ValidationError pattern in clean_*
"analysis/admin.py" = ["BLE001", "TRY301"]
# Dagster workspace: namespace packages intentional; context.log has no .exception(); broad catch is asset contract
"orchestration/dagster_home/assets.py" = ["INP001", "BLE001", "TRY300", "TRY400"]
"orchestration/dagster_home/jobs.py" = ["INP001"]
"orchestration/dagster_home/repository.py" = ["INP001", "ERA001"]
# maintenance_jobs: ANN001 — Dagster 1.12.8 errors if context param is type-annotated; TRY400 — context.log has no .exception()
"orchestration/dagster_home/maintenance_jobs.py" = ["INP001", "ANN001", "TRY400"]
# run_maintenance_job: ARG/ANN — Django management command signature (*args, **options) cannot be changed
"orchestration/management/commands/run_maintenance_job.py" = ["ARG001", "ARG002", "ANN003", "BLE001"]# Sphinx docs dir: not a Python package; copyright variable is a Sphinx requirement; E402 because sys.path is set first
"docs/source/conf.py" = ["INP001", "A001", "E402"]
# make_aware(datetime(...)) is the correct Django DST-safe pattern; naive datetime is only intermediate
"prototype/views.py" = ["DTZ001"]

[tool.ruff.lint.isort]
known-first-party = ["prototype", "field_data", "analysis", "orchestration"]
known-third-party = ["django", "rest_framework", "dagster"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.bandit]
exclude_dirs = ["venv"]
# B105/B106: all instances are settings templates or test fixture passwords — intentional
# B101: assert statements are legitimate in non-test production code here
skips = ["B101", "B105", "B106"]

[tool.coverage.run]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "venv/*",
    ".venv/*",
    "manage.py",
    "*/settings*.py",
    "*/local_settings*",
    "conftest.py",
    "docs/*",
    "*/asgi.py",
    "*/wsgi.py",
    "vulture_whitelist.py",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
strict = true
# Subclassing untyped third-party bases (unfold, import-export) is intentional in Django
disallow_subclassing_any = false
# Unfold decorators (@display etc.) are intentionally untyped
disallow_untyped_decorators = false
exclude = ["venv/", "\\.venv/", "migrations/", "manage\\.py", "docs/"]

[[tool.mypy.overrides]]
module = ["rest_framework.*", "rest_framework_gis.*", "dagster.*", "tablib.*", "unfold.*", "guardian.*", "import_export.*"]
ignore_missing_imports = true

# Transitive imports from field_data with pre-existing errors — suppress so hooks stay green
[[tool.mypy.overrides]]
module = [
    "prototype.*",
    "analysis.*",
    "orchestration.*",
    "laboratory.*",
    "geodata.*",
    "bibliography.*",
    "conftest",
    "field_data.api_views",
    "field_data.filters",
    "field_data.forms",
    "field_data.tests.*",
    "field_data.utils",
    "field_data.resources",
]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "prototype.test_settings"

[dependency-groups]
dev = [
    # Linting / formatting
    "ruff",
    "pyupgrade",
    "black",
    "isort",
    "docformatter",
    "pre-commit",
    # Type checking
    "mypy>=1.13,<2",
    "basedpyright",
    "ty",
    "django-stubs[compatible-mypy]",
    "django-stubs-ext",
    # Testing
    "pytest",
    "pytest-django",
    "pytest-cov",
    # Static analysis / metrics
    "radon",
    "vulture",
    "pylint",
    "bandit",
    "lizard",
    "mutmut",
    "wily",
    "xenon",
]
